# attack-sync

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  create_attack_changelogs.py  generate_mapping_excel.py  pyproject.toml  requirements.txt
.github/workflows/: build-preview.yml  build.yml  python_lint.yml
attack-changes/: index.html
attack-changes/v10.0-v10.1/: changelog-detailed.html  changelog.json  changelog.md  index.html  layer-enterprise.json  layer-ics.json
attack-changes/v10.0-v11.0/: changelog.md  index.html  layer-enterprise.json
attack-changes/v10.0-v11.1/: changelog.md  index.html  layer-enterprise.json  layer-mobile.json
attack-changes/v10.0-v11.2/: changelog.md  index.html  layer-ics.json
attack-changes/v10.0-v11.3/: changelog.md  index.html  layer-enterprise.json  layer-ics.json
attack-changes/v10.0-v12.0/: changelog.md  index.html  layer-enterprise.json
attack-changes/v10.0-v12.1/: changelog.md  index.html  layer-enterprise.json
data/: .gitignore
requirements/: requirements.in
samples/: mapping_diff_attack_v10.1-v12.1.xlsx  mapping_diff_nist800-53-r4_attack_v10.1-v12.1.xlsx  mapping_diff_nist800-53-r5_attack_v10.1-v12.1.xlsx  nist800-53-r4-mappings-output.xlsx  nist800-53-r5-mappings-output.xlsx
src/: changelog_helper.py  create_accordian.py  create_accordion.py  create_attack_changelogs.py  generate_mapping_excel.py
templates/: accordian-item.html  accordion-item.html  changelog-detail.html.j2  changelog-landing.html.j2  heading.html  macros.html.j2  nav-buttons.html  nav-content.html.j2  nav.html  root.html.j2  site-about.html.j2  site-index.html.j2  subnav.html  table.html
tests/: test_site_builder.py  test_template.py
(+266 files in other folders)
